deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-food-api
spec:
  selector:
    matchLabels:
      app: easy-food-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        app: easy-food-api
    spec:
      volumes:
        - name: appsettings
          secret:
            secretName: easy-food-api-secrets
            defaultMode: 420
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/America/Sao_Paulo
            type: File
      nodeSelector:
        app: homolog
      containers:
      - name: easy-food-api
        image: easy-food-api:v00001
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: appsettings
            mountPath: /app/appsettings.json
            subPath: appsettings.json
          - name: tz-config
            mountPath: /etc/localtime
        resources:
          limits:
            cpu: "240m"
            memory: "400Mi"
          requests:
            cpu: "60m"
            memory: "180Mi"
        ports:
          - containerPort: 80
            protocol: TCP
          - containerPort: 8080
            protocol: TCP
          - containerPort: 443
            protocol: TCP
      imagePullSecrets:
      - name: regcred
