deploy/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: easy-food-api
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 80
  selector: 
    app: easy-food-api
