deploy/kubernetes/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: easy-food-api
spec:
  tls:
    - hosts:
        - easy-food-api.com.br
      secretName: easy-food-tls
  rules:
    - host: easy-food-api.com.br
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: easy-food-api
                port:
                  number: 80

          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: easy-food-api
                port:
                  number: 443
status:
  loadBalancer:
    ingress:
